# pmpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  pyproject.toml
bindings/: CMakeLists.txt  bindings.cu
kernels/: CMakeLists.txt  Makefile  Tensor.cu  Tensor.cuh  array.cu  array.cuh  array_kernels.cuh  tensor_kernels.cuh  utils.cuh  vec.cu  vec.cuh  vec_kernels.cuh
notes/: Exercises 1.md  Exercises 2.md  Intro to CUDA.md  Multidimensional Grids.md
notes/.obsidian/: app.json  appearance.json  community-plugins.json  hotkeys.json  workspace.json
notes/.obsidian/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  workspace.json
notes/.obsidian/.obsidian/plugins/code-styler/: styles.css
notes/.obsidian/.obsidian/plugins/obsidian-git/: main.js  manifest.json
notes/.obsidian/.obsidian/snippets/: math.css
notes/.obsidian/plugins/code-styler/: main.js  manifest.json
notes/.obsidian/plugins/obsidian-latex-environments/: data.json  main.js  manifest.json
notes/.obsidian/plugins/obsidian-latex-suite/: data.json
notes/.obsidian/plugins/obsidian-vimrc-support/: data.json
notes/.obsidian/themes/Blue Topaz/: manifest.json
python/: pytest.ini  test_binding.py  test_performance.py
test/: CMakeLists.txt  Makefile  test_array.cu
test/cpp/: test_array.cu
