[build-system]
requires = ["scikit-build-core", "pybind11", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pmpp_bindings"
version = "0.1.0"
description = "Cuda bindings"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.define.CMAKE_CUDA_ARCHITECTURES = "native"